--- a/passhash.html
+++ b/passhash.html
@@ -1510,7 +1510,7 @@ var PassHashCommon =
                             </tr>
                             <tr>
                                 <td>
-                                    <input id="s10" name="size" type="radio" value="10" class="option" checked="checked" onclick="update(this);">
+                                    <input id="s10" name="size" type="radio" value="10" class="option" onclick="update(this);">
                                     <span class="option">10</span>
                                 </td>
                                 <td>
